--- a/cplus_prog/3sum_two.html
+++ b/cplus_prog/3sum_two.html
@@ -10,14 +10,47 @@
 <div class="container">
 	<h2>C++ Program to Print Sum of Two Numbers</h2><br><br>
 		<div class="box">
-			<div class="right">
 				<div class="head">Source Code</div>
-				<div class="input"><img src="../simple_prog/3sum_inp.PNG" class="img"></div>
-			</div>
-			<div class="right">
+				<div class="input">
+					<!-- <img src="../simple_prog/3sum_inp.PNG" class="img"> -->
+					<!-- HTML generated using hilite.me --><div style="background: #202020; overflow:auto;width:auto;border:solid lightblue;border-width:.1em .1em .1em .4em;padding:.2em .6em;"><pre style="margin: 0; line-height: 125%"><span style="color: #cd2828; font-weight: bold">#include &lt;iostream&gt;</span>
+<span style="color: #6ab825; font-weight: bold">using</span> <span style="color: #6ab825; font-weight: bold">namespace</span> <span style="color: #d0d0d0">std;</span>
+
+<span style="color: #6ab825; font-weight: bold">int</span> <span style="color: #447fcf">main</span><span style="color: #d0d0d0">()</span> <span style="color: #d0d0d0">{</span>
+
+  <span style="color: #6ab825; font-weight: bold">int</span> <span style="color: #d0d0d0">first_number,</span> <span style="color: #d0d0d0">second_number,</span> <span style="color: #d0d0d0">sum;</span>
+    
+  <span style="color: #d0d0d0">cout</span> <span style="color: #d0d0d0">&lt;&lt;</span> <span style="color: #ed9d13">&quot;Enter two integers: &quot;</span><span style="color: #d0d0d0">;</span>
+  <span style="color: #d0d0d0">cin</span> <span style="color: #d0d0d0">&gt;&gt;</span> <span style="color: #d0d0d0">first_number</span> <span style="color: #d0d0d0">&gt;&gt;</span> <span style="color: #d0d0d0">second_number;</span>
+
+  <span style="color: #999999; font-style: italic">// sum of two numbers in stored in variable sumOfTwoNumbers</span>
+  <span style="color: #d0d0d0">sum</span> <span style="color: #d0d0d0">=</span> <span style="color: #d0d0d0">first_number</span> <span style="color: #d0d0d0">+</span> <span style="color: #d0d0d0">second_number;</span>
+
+  <span style="color: #999999; font-style: italic">// prints sum </span>
+  <span style="color: #d0d0d0">cout</span> <span style="color: #d0d0d0">&lt;&lt;</span> <span style="color: #d0d0d0">first_number</span> <span style="color: #d0d0d0">&lt;&lt;</span> <span style="color: #ed9d13">&quot; + &quot;</span> <span style="color: #d0d0d0">&lt;&lt;</span>  <span style="color: #d0d0d0">second_number</span> <span style="color: #d0d0d0">&lt;&lt;</span> <span style="color: #ed9d13">&quot; = &quot;</span> <span style="color: #d0d0d0">&lt;&lt;</span> <span style="color: #d0d0d0">sum;</span>     
+
+  <span style="color: #6ab825; font-weight: bold">return</span> <span style="color: #3677a9">0</span><span style="color: #d0d0d0">;</span>
+<span style="color: #d0d0d0">}</span>
+</pre></div>
+
+				</div>
 				<div class="head">Output</div>
-				<div class="input"><img src="../simple_prog/3sum_out.PNG" class="img"></div>
-			</div>
+				<div class="Output">
+					<!-- <img src="../simple_prog/3sum_out.PNG" class="img"> -->
+					Enter two integers: 4<br>
+					5<br>
+					4 + 5 = 9<br>
+				</div>
+
+				<div class="exp">
+					<h2>Explanation of C++ Program to Print Sum of Two Numbers.</h2><br>
+					<p class="text">In this program, the user is asked to enter two integers. 
+						These two integers are stored in variables <kbd class="outline">first_number</kbd> 
+						and second_number</kbd> respectively.</p>
+						<p class="text">Then, the variables are added using the <kbd class="outline">+</kbd> operator and stored in the <kbd class="outline">sum</kbd> variable.
+
+							Finally, sum is displayed on the screen.</p>
+				</div>
 		</div>
 	
 
