--- a/cplus_prog/4avg_two.html
+++ b/cplus_prog/4avg_two.html
@@ -13,11 +13,44 @@
 		<div class="box">
 			<div class="right">
 				<div class="head">Source Code</div>
-				<div class="input"><img src="../simple_prog/4avg_inp.PNG" class="img"></div>
-			</div>
-			<div class="right">
+				<div class="input">
+					<!-- <img src="../simple_prog/4avg_inp.PNG" class="img"> -->
+					<!-- HTML generated using hilite.me --><div style="background: #202020; overflow:auto;width:auto;border:solid lightblue;border-width:.1em .1em .1em .4em;padding:.2em .6em;"><pre style="margin: 0; line-height: 1.25; letter-spacing: 1px;"><span style="color: #cd2828; font-weight: bold">#include &lt;iostream&gt;</span>
+<span style="color: #6ab825; font-weight: bold">using</span> <span style="color: #6ab825; font-weight: bold">namespace</span> <span style="color: #d0d0d0">std;</span> 
+<span style="color: #6ab825; font-weight: bold">int</span> <span style="color: #447fcf">main</span><span style="color: #d0d0d0">()</span>
+<span style="color: #d0d0d0">{</span>
+    <span style="color: #6ab825; font-weight: bold">float</span> <span style="color: #d0d0d0">n1,</span> <span style="color: #d0d0d0">n2;</span>
+    <span style="color: #d0d0d0">cout&lt;&lt;</span><span style="color: #ed9d13">&quot;Enter the Number 1 : &quot;</span><span style="color: #d0d0d0">;</span>
+    <span style="color: #d0d0d0">cin</span> <span style="color: #d0d0d0">&gt;&gt;</span> <span style="color: #d0d0d0">n1;</span>
+    <span style="color: #d0d0d0">cout</span> <span style="color: #d0d0d0">&lt;&lt;</span> <span style="color: #ed9d13">&quot;Enter the Number 2 : &quot;</span><span style="color: #d0d0d0">;</span>
+    <span style="color: #d0d0d0">cin</span> <span style="color: #d0d0d0">&gt;&gt;</span> <span style="color: #d0d0d0">n2;</span>
+    <span style="color: #6ab825; font-weight: bold">float</span> <span style="color: #d0d0d0">avg=(n1+n2)</span> <span style="color: #d0d0d0">/</span> <span style="color: #d0d0d0">(</span><span style="color: #3677a9">2.0</span><span style="color: #d0d0d0">);</span>
+    <span style="color: #d0d0d0">cout</span> <span style="color: #d0d0d0">&lt;&lt;</span> <span style="color: #ed9d13">&quot;Average: (&quot;</span><span style="color: #d0d0d0">&lt;&lt;</span> <span style="color: #d0d0d0">n1</span> <span style="color: #d0d0d0">&lt;&lt;</span><span style="color: #ed9d13">&quot; + &quot;</span><span style="color: #d0d0d0">&lt;&lt;</span> <span style="color: #d0d0d0">n2</span> <span style="color: #d0d0d0">&lt;&lt;</span> <span style="color: #ed9d13">&quot;) / 2.0 = &quot;</span><span style="color: #d0d0d0">&lt;&lt;avg;</span>
+    <span style="color: #6ab825; font-weight: bold">return</span> <span style="color: #3677a9">0</span><span style="color: #d0d0d0">;</span>
+<span style="color: #d0d0d0">}</span>
+</pre></div>
+
+				</div>
 				<div class="head">Output</div>
-				<div class="input"><img src="../simple_prog/4avg_out.PNG" class="img"></div>
+				<div class="Output">
+					<!-- <img src="../simple_prog/4avg_out.PNG" class="img"> -->
+					Enter the Number 1 : 21<br>
+Enter the Number 2 : 35<br>
+Average: (21 + 35) / 2.0 = 28
+				</div>
+			</div>
+			<div class="exp">
+				<h2>Explaination of C++ Program to Print Average of two Numbers.</h2><br>
+				<p class="text">This program takes in two float numbers n1 and n2 as a screen input from the user.</p>
+				<p class="text">As you know that all the execution of any C++ program starts from <kbd class="outline">main()</kbd> function. 
+					So the <kbd class="outline">main()</kbd> function is defined with return type as integer. 
+					Now, you have to take two float type variables name 'n1' and 'n2'. <br> <br>
+					Now using the cout statement prints the message <kbd class="outline">"Enter the Number 1 : "</kbd> and <kbd class="outline">"Enter the Number 2 : " </kbd>
+					Next the cin statement takes the 2 values from the user and put them in n1 and yn2 respectively. <br><br>
+					Then you have to take another floating type variable name 'avg'.
+					Then the addition of n1 and n2 is divided by 2 (which is the formula for mean of two numbers).</p>
+					<p class="text">Then the cout statements are use to display the calculated value of average. 
+					 And finally the <kbd class="outline">return 0;</kbd></p>
 			</div>
 		</div>
 	
