--- a/cplus_prog/5reverse_number.html
+++ b/cplus_prog/5reverse_number.html
@@ -5,19 +5,99 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="cstyle.css">
+	<style>
+		table{width:450px; border-collapse: collapse; margin: 20px 10px;}
+		th, td{padding: 5px; text-align: left;}
+		@media(max-width: 600px)
+		{
+			table{width:350px; border-collapse: collapse; margin: 5px;}
+			th, td{padding: 2px; text-align: left; font-size: 12px;}
+		}
 	</style>
 </head>
 <body>
 <div class="container">
 	<h2>C++ Program to find Reverse of Number.</h2><br><br>
 		<div class="box">
-			<div class="right">
 				<div class="head">Source Code</div>
-				<div class="input"><img src="../simple_prog/5reverse_inp.PNG" class="img"></div>
-			</div>
-			<div class="right">
+				<div class="input">
+					<!-- <img src="../simple_prog/5reverse_inp.PNG" class="img"> -->
+					<!-- HTML generated using hilite.me --><div style="background: #202020; overflow:auto;width:auto;border:solid lightblue;border-width:.1em .1em .1em .4em;padding:.2em .6em;"><pre style="margin: 0; line-height: 125%"><span style="color: #cd2828; font-weight: bold">#include &lt;iostream&gt;</span>
+<span style="color: #6ab825; font-weight: bold">using</span> <span style="color: #6ab825; font-weight: bold">namespace</span> <span style="color: #d0d0d0">std;</span>
+
+<span style="color: #6ab825; font-weight: bold">int</span> <span style="color: #447fcf">main</span><span style="color: #d0d0d0">()</span> <span style="color: #d0d0d0">{</span>
+
+  <span style="color: #6ab825; font-weight: bold">int</span> <span style="color: #d0d0d0">n,</span> <span style="color: #d0d0d0">reversed_number</span> <span style="color: #d0d0d0">=</span> <span style="color: #3677a9">0</span><span style="color: #d0d0d0">,</span> <span style="color: #d0d0d0">remainder;</span>
+
+  <span style="color: #d0d0d0">cout</span> <span style="color: #d0d0d0">&lt;&lt;</span> <span style="color: #ed9d13">&quot;Enter an integer: &quot;</span><span style="color: #d0d0d0">;</span>
+  <span style="color: #d0d0d0">cin</span> <span style="color: #d0d0d0">&gt;&gt;</span> <span style="color: #d0d0d0">n;</span>
+
+  <span style="color: #6ab825; font-weight: bold">while</span><span style="color: #d0d0d0">(n</span> <span style="color: #d0d0d0">!=</span> <span style="color: #3677a9">0</span><span style="color: #d0d0d0">)</span> <span style="color: #d0d0d0">{</span>
+    <span style="color: #d0d0d0">remainder</span> <span style="color: #d0d0d0">=</span> <span style="color: #d0d0d0">n</span> <span style="color: #d0d0d0">%</span> <span style="color: #3677a9">10</span><span style="color: #d0d0d0">;</span>
+    <span style="color: #d0d0d0">reversed_number</span> <span style="color: #d0d0d0">=</span> <span style="color: #d0d0d0">reversed_number</span> <span style="color: #d0d0d0">*</span> <span style="color: #3677a9">10</span> <span style="color: #d0d0d0">+</span> <span style="color: #d0d0d0">remainder;</span>
+    <span style="color: #d0d0d0">n</span> <span style="color: #d0d0d0">/=</span> <span style="color: #3677a9">10</span><span style="color: #d0d0d0">;</span>
+  <span style="color: #d0d0d0">}</span>
+
+  <span style="color: #d0d0d0">cout</span> <span style="color: #d0d0d0">&lt;&lt;</span> <span style="color: #ed9d13">&quot;Reversed Number = &quot;</span> <span style="color: #d0d0d0">&lt;&lt;</span> <span style="color: #d0d0d0">reversed_number;</span>
+
+  <span style="color: #6ab825; font-weight: bold">return</span> <span style="color: #3677a9">0</span><span style="color: #d0d0d0">;</span>
+<span style="color: #d0d0d0">}</span>
+</pre></div>
+
+				</div>
+
 				<div class="head">Output</div>
-				<div class="input"><img src="../simple_prog/5reverse_out.PNG" class="img"></div>
+				<div class="Output">
+					<!-- <img src="../simple_prog/5reverse_out.PNG" class="img"> -->
+					Enter an integer: 6235<br>
+Reversed number = 5326
+				</div>
+			<div class="exp">
+				<h2>Explanation of C++Program to find Reverse of Number.</h2><br>
+				<p class="text">This program takes an integer 
+					input from the user and stores it in variable <kbd class="outline">n</kbd><br>
+					Then the while loop is iterated until <kbd class="outline">n != 0 </kbd>is false.</p>
+				<p class="text">In each iteration, the remainder when the value of n is divided by 10 is calculated, 
+					<kbd class="outline">reversed_number</kbd> is computed and the value of n is decreased 10 fold.</p>
+					<table>
+						<tr>
+						  <th>n</th>
+						  <th>n != 0</th>
+						  <th>remainder</th>
+						  <th>reversed_number</th>
+						</tr>
+						<tr>
+						  <td>6235</td>
+						  <td>true</td>
+						  <td>5</td>
+						  <td>0 * 10 + 5 = 5</td>
+						</tr>
+						<tr>
+						  <td>623</td>
+						  <td>true</td>
+						  <td>3</td>
+						  <td>5 * 10 + 3 = 53</td>
+						</tr>
+						<tr>
+						  <td>62</td>
+						  <td>true</td>
+						  <td>2</td>
+						  <td>53 * 10 + 2 = 532</td>
+						</tr>
+						<tr>
+						  <td>6</td>
+						  <td>true</td>
+						  <td>6</td>
+						  <td>532 * 10 + 6 = 5326</td>
+						</tr>
+						<tr>
+						  <td>0</td>
+						  <td>false</td>
+						  <td>-</td>
+						  <td>loop terminates</td>
+						</tr>
+					  </table>
+					<p class="text">Finally,<kbd class="outline"> reversed_number</kbd> (which contains the reversed number) is printed on the screen.</p>
 			</div>
 		</div>
 	
