--- a/cplus_prog/12age.html
+++ b/cplus_prog/12age.html
@@ -13,11 +13,36 @@
 		<div class="box">
 			<div class="right">
 				<div class="head">Source Code</div>
-				<div class="input"><img src="../if_switch_loop/12age_inp.PNG" class="img"></div>
-			</div>
-			<div class="right">
+				<div class="input">
+					<!-- <img src="../if_switch_loop/12age_inp.PNG" class="img"> -->
+					<!-- HTML generated using hilite.me --><div style="background: #202020; overflow:auto;width:auto;border:solid lightblue;border-width:.1em .1em .1em .4em;padding:.2em .6em;"><pre style="margin: 0; line-height: 125%"><span style="color: #cd2828; font-weight: bold">#include &lt;iostream&gt;</span>
+<span style="color: #6ab825; font-weight: bold">using</span> <span style="color: #6ab825; font-weight: bold">namespace</span> <span style="color: #d0d0d0">std;</span>
+<span style="color: #6ab825; font-weight: bold">int</span> <span style="color: #447fcf">main</span><span style="color: #d0d0d0">()</span>
+<span style="color: #d0d0d0">{</span>
+    <span style="color: #6ab825; font-weight: bold">int</span> <span style="color: #d0d0d0">myAge,</span> <span style="color: #d0d0d0">friendAge;</span>
+    <span style="color: #d0d0d0">cout&lt;&lt;</span><span style="color: #ed9d13">&quot;Enter your age: &quot;</span><span style="color: #d0d0d0">;</span>
+    <span style="color: #d0d0d0">cin&gt;&gt;myAge;</span>
+    <span style="color: #d0d0d0">cout&lt;&lt;</span><span style="color: #ed9d13">&quot;Enter your friend&#39;s age: &quot;</span><span style="color: #d0d0d0">;</span>
+    <span style="color: #d0d0d0">cin&gt;&gt;friendAge;</span>
+    <span style="color: #6ab825; font-weight: bold">if</span><span style="color: #d0d0d0">(myAge</span> <span style="color: #d0d0d0">&gt;</span> <span style="color: #d0d0d0">friendAge)</span>
+        <span style="color: #d0d0d0">cout&lt;&lt;</span><span style="color: #ed9d13">&quot;You are older.\n&quot;</span><span style="color: #d0d0d0">;</span>
+    <span style="color: #6ab825; font-weight: bold">else</span> <span style="color: #6ab825; font-weight: bold">if</span><span style="color: #d0d0d0">(myAge</span> <span style="color: #d0d0d0">&lt;</span> <span style="color: #d0d0d0">friendAge)</span>
+        <span style="color: #d0d0d0">cout&lt;&lt;</span><span style="color: #ed9d13">&quot;You are younger.\n&quot;</span><span style="color: #d0d0d0">;</span>
+    <span style="color: #6ab825; font-weight: bold">else</span>
+    <span style="color: #d0d0d0">cout&lt;&lt;</span><span style="color: #ed9d13">&quot;You and your friend are the same age. \n&quot;</span><span style="color: #d0d0d0">;</span>
+    <span style="color: #6ab825; font-weight: bold">return</span> <span style="color: #3677a9">0</span><span style="color: #d0d0d0">;</span>
+<span style="color: #d0d0d0">}</span>
+</pre></div>
+
+				</div>
 				<div class="head">Output</div>
-				<div class="input"><img src="../if_switch_loop/12age_out.PNG" class="img"></div>
+				<div class="Output">
+					<!-- <img src="../if_switch_loop/12age_out.PNG" class="img"> -->
+					Enter your age: 18<br>
+Enter your friend's age: 20<br>
+You are younger.<br>
+
+				</div>
 			</div>
 		</div>
 	
