--- a/cplus_prog/6area_circle.html
+++ b/cplus_prog/6area_circle.html
@@ -13,11 +13,31 @@
 		<div class="box">
 			<div class="right">
 				<div class="head">Source Code</div>
-				<div class="input"><img src="../simple_prog/6area_inp.PNG" class="img"></div>
-			</div>
-			<div class="right">
+				<div class="input">
+					<!-- <img src="../simple_prog/6area_inp.PNG" class="img"> -->
+					<!-- HTML generated using hilite.me --><div style="background: #202020; overflow:auto;width:auto;border:solid lightblue;border-width:.1em .1em .1em .4em;padding:.2em .6em;"><pre style="margin: 0; line-height: 125%"><span style="color: #999999; font-style: italic">//C++ program to calculate area of the circle</span>
+<span style="color: #cd2828; font-weight: bold">#include &lt;iostream&gt;</span>
+<span style="color: #6ab825; font-weight: bold">using</span> <span style="color: #6ab825; font-weight: bold">namespace</span> <span style="color: #d0d0d0">std;</span>
+
+<span style="color: #6ab825; font-weight: bold">int</span> <span style="color: #447fcf">main</span><span style="color: #d0d0d0">()</span> <span style="color: #d0d0d0">{</span>
+
+    <span style="color: #6ab825; font-weight: bold">float</span> <span style="color: #d0d0d0">radius,</span> <span style="color: #d0d0d0">area_circle;</span>
+    <span style="color: #d0d0d0">cout</span> <span style="color: #d0d0d0">&lt;&lt;</span> <span style="color: #ed9d13">&quot;Enter the radius of circle: &quot;</span><span style="color: #d0d0d0">;</span>
+    <span style="color: #d0d0d0">cin</span> <span style="color: #d0d0d0">&gt;&gt;</span> <span style="color: #d0d0d0">radius;</span>
+    
+    <span style="color: #d0d0d0">area_circle</span> <span style="color: #d0d0d0">=</span> <span style="color: #3677a9">3.14</span> <span style="color: #d0d0d0">*</span> <span style="color: #d0d0d0">radius</span> <span style="color: #d0d0d0">*</span> <span style="color: #d0d0d0">radius;</span>
+    <span style="color: #d0d0d0">cout</span> <span style="color: #d0d0d0">&lt;&lt;</span> <span style="color: #ed9d13">&quot;Area of circle: &quot;</span> <span style="color: #d0d0d0">&lt;&lt;</span> <span style="color: #d0d0d0">area_circle</span> <span style="color: #d0d0d0">&lt;&lt;</span> <span style="color: #d0d0d0">endl;</span>
+    
+    <span style="color: #6ab825; font-weight: bold">return</span> <span style="color: #3677a9">0</span><span style="color: #d0d0d0">;</span>
+<span style="color: #d0d0d0">}</span>
+</pre></div>
+
+				</div>
 				<div class="head">Output</div>
-				<div class="input"><img src="../simple_prog/6area_out.PNG" class="img"></div>
+				<div class="Output">
+					<!-- <img src="../simple_prog/6area_out.PNG" class="img"> -->
+					Enter the radius of circle: 5.2<br>Area of circle: 84.9056
+				</div>
 			</div>
 		</div>
 	
