--- a/cplus_prog/7sum_digit.html
+++ b/cplus_prog/7sum_digit.html
@@ -13,11 +13,36 @@
 		<div class="box">
 			<div class="right">
 				<div class="head">Source Code</div>
-				<div class="input"><img src="../simple_prog/7sum_inp.PNG" class="img"></div>
-			</div>
-			<div class="right">
+				<div class="input">
+					<!-- <img src="../simple_prog/7sum_inp.PNG" class="img"> -->
+					<!-- HTML generated using hilite.me --><div style="background: #202020; overflow:auto;width:auto;border:solid lightblue;border-width:.1em .1em .1em .4em;padding:.2em .6em;"><pre style="margin: 0; line-height: 125%"><span style="color: #cd2828; font-weight: bold">#include &lt;iostream&gt;</span>
+<span style="color: #6ab825; font-weight: bold">using</span> <span style="color: #6ab825; font-weight: bold">namespace</span> <span style="color: #d0d0d0">std;</span>
+
+<span style="color: #6ab825; font-weight: bold">int</span> <span style="color: #447fcf">main</span><span style="color: #d0d0d0">()</span>
+<span style="color: #d0d0d0">{</span>
+    <span style="color: #6ab825; font-weight: bold">int</span> <span style="color: #d0d0d0">n,</span> <span style="color: #d0d0d0">sum=</span><span style="color: #3677a9">0</span><span style="color: #d0d0d0">,rem;</span>
+    <span style="color: #d0d0d0">cout&lt;&lt;</span><span style="color: #ed9d13">&quot;Enter a number:&quot;</span><span style="color: #d0d0d0">;</span>
+    <span style="color: #d0d0d0">cin&gt;&gt;n;</span>
+    <span style="color: #6ab825; font-weight: bold">while</span><span style="color: #d0d0d0">(n&gt;</span><span style="color: #3677a9">0</span><span style="color: #d0d0d0">)</span>
+    <span style="color: #d0d0d0">{</span>
+        <span style="color: #d0d0d0">rem=n%</span><span style="color: #3677a9">10</span><span style="color: #d0d0d0">;</span>
+        <span style="color: #d0d0d0">sum=sum+rem;</span>
+        <span style="color: #d0d0d0">n=n/</span><span style="color: #3677a9">10</span><span style="color: #d0d0d0">;</span>
+        
+    <span style="color: #d0d0d0">}</span>
+
+    <span style="color: #d0d0d0">cout&lt;&lt;</span><span style="color: #ed9d13">&quot;Sum is= &quot;</span><span style="color: #d0d0d0">&lt;&lt;sum&lt;&lt;endl;</span>
+    <span style="color: #6ab825; font-weight: bold">return</span> <span style="color: #3677a9">0</span><span style="color: #d0d0d0">;</span>
+<span style="color: #d0d0d0">}</span>
+</pre></div>
+
+				</div>
+			
 				<div class="head">Output</div>
-				<div class="input"><img src="../simple_prog/7sum_out.PNG" class="img"></div>
+				<div class="Output">
+					<!-- <img src="../simple_prog/7sum_out.PNG" class="img"> -->
+					Enter a number:2023<br>Sum is= 7
+				</div>
 			</div>
 		</div>
 	
