--- a/cplus_prog/13largeTwo.html
+++ b/cplus_prog/13largeTwo.html
@@ -13,11 +13,40 @@
 		<div class="box">
 			<div class="right">
 				<div class="head">Source Code</div>
-				<div class="input"><img src="../if_switch_loop/13largeTwo_inp.PNG" class="img"></div>
+				<div class="input">
+					<!-- <img src="../if_switch_loop/13largeTwo_inp.PNG" class="img"> -->
+					<!-- HTML generated using hilite.me --><div style="background: #202020; overflow:auto;width:auto;border:solid lightblue;border-width:.1em .1em .1em .4em;padding:.2em .6em;"><pre style="margin: 0; line-height: 125%"><span style="color: #cd2828; font-weight: bold">#include &lt;iostream&gt; </span>
+<span style="color: #6ab825; font-weight: bold">using</span> <span style="color: #6ab825; font-weight: bold">namespace</span> <span style="color: #d0d0d0">std;</span>
+<span style="color: #6ab825; font-weight: bold">int</span> <span style="color: #447fcf">main</span><span style="color: #d0d0d0">()</span>
+<span style="color: #d0d0d0">{</span>
+    <span style="color: #6ab825; font-weight: bold">int</span> <span style="color: #d0d0d0">num1,</span> <span style="color: #d0d0d0">num2;</span>
+    <span style="color: #d0d0d0">cout&lt;&lt;</span><span style="color: #ed9d13">&quot;Enter first number:&quot;</span><span style="color: #d0d0d0">;</span>
+    <span style="color: #d0d0d0">cin&gt;&gt;num1;</span>
+    <span style="color: #d0d0d0">cout&lt;&lt;</span><span style="color: #ed9d13">&quot;Enter second number:&quot;</span><span style="color: #d0d0d0">;</span>
+    <span style="color: #d0d0d0">cin&gt;&gt;num2;</span>
+    <span style="color: #6ab825; font-weight: bold">if</span><span style="color: #d0d0d0">(num1&gt;num2){</span>
+        <span style="color: #d0d0d0">cout&lt;&lt;</span><span style="color: #ed9d13">&quot;First number &quot;</span><span style="color: #d0d0d0">&lt;&lt;num1&lt;&lt;</span><span style="color: #ed9d13">&quot; is the largest&quot;</span><span style="color: #d0d0d0">;</span>
+    <span style="color: #d0d0d0">}</span>
+    <span style="color: #6ab825; font-weight: bold">else</span> <span style="color: #6ab825; font-weight: bold">if</span><span style="color: #d0d0d0">(num1</span> <span style="color: #d0d0d0">==num2){</span>
+        <span style="color: #d0d0d0">cout&lt;&lt;</span><span style="color: #ed9d13">&quot;Both the numbers are equal.&quot;</span><span style="color: #d0d0d0">;</span>
+    <span style="color: #d0d0d0">}</span>
+    <span style="color: #6ab825; font-weight: bold">else</span><span style="color: #d0d0d0">{</span>
+        <span style="color: #d0d0d0">cout&lt;&lt;</span><span style="color: #ed9d13">&quot;Second number &quot;</span><span style="color: #d0d0d0">&lt;&lt;num2&lt;&lt;</span><span style="color: #ed9d13">&quot; is the largest&quot;</span><span style="color: #d0d0d0">;</span>
+    <span style="color: #d0d0d0">}</span>
+    <span style="color: #6ab825; font-weight: bold">return</span> <span style="color: #3677a9">0</span><span style="color: #d0d0d0">;</span>
+<span style="color: #d0d0d0">}</span>
+</pre></div>
+
+				</div>
 			</div>
 			<div class="right">
 				<div class="head">Output</div>
-				<div class="input"><img src="../if_switch_loop/13largeTwo_out.PNG" class="img"></div>
+				<div class="Output">
+					<!-- <img src="../if_switch_loop/13largeTwo_out.PNG" class="img"> -->
+					Enter first number:33<br>
+Enter second number:18<br>
+First number 33 is the largest<br>
+				</div>
 			</div>
 		</div>
 	
