--- a/cplus_prog/14largeThree.html
+++ b/cplus_prog/14largeThree.html
@@ -12,11 +12,35 @@
 		<div class="box">
 			<div class="right">
 				<div class="head">Source Code</div>
-				<div class="input"><img src="../if_switch_loop/14largeThree_inp.PNG" class="img"></div>
+				<div class="input">
+					<!-- <img src="../if_switch_loop/14largeThree_inp.PNG" class="img"> -->
+					<!-- HTML generated using hilite.me --><div style="background: #202020; overflow:auto;width:auto;border:solid lightblue;border-width:.1em .1em .1em .4em;padding:.2em .6em;"><pre style="margin: 0; line-height: 125%"><span style="color: #cd2828; font-weight: bold">#include &lt;iostream&gt; </span>
+<span style="color: #6ab825; font-weight: bold">using</span> <span style="color: #6ab825; font-weight: bold">namespace</span> <span style="color: #d0d0d0">std;</span>
+<span style="color: #6ab825; font-weight: bold">int</span> <span style="color: #447fcf">main</span><span style="color: #d0d0d0">()</span> <span style="color: #d0d0d0">{</span>
+    <span style="color: #6ab825; font-weight: bold">float</span> <span style="color: #d0d0d0">n1,</span> <span style="color: #d0d0d0">n2,</span> <span style="color: #d0d0d0">n3;</span>
+    <span style="color: #d0d0d0">cout</span> <span style="color: #d0d0d0">&lt;&lt;</span> <span style="color: #ed9d13">&quot;Enter three numbers: &quot;</span><span style="color: #d0d0d0">;</span>
+    <span style="color: #d0d0d0">cin</span> <span style="color: #d0d0d0">&gt;&gt;</span> <span style="color: #d0d0d0">n1</span> <span style="color: #d0d0d0">&gt;&gt;</span> <span style="color: #d0d0d0">n2</span> <span style="color: #d0d0d0">&gt;&gt;</span> <span style="color: #d0d0d0">n3;</span>
+    <span style="color: #6ab825; font-weight: bold">if</span><span style="color: #d0d0d0">(n1</span> <span style="color: #d0d0d0">&gt;=</span> <span style="color: #d0d0d0">n2</span> <span style="color: #d0d0d0">&amp;&amp;</span> <span style="color: #d0d0d0">n1</span> <span style="color: #d0d0d0">&gt;=</span> <span style="color: #d0d0d0">n3)</span>
+        <span style="color: #d0d0d0">cout</span> <span style="color: #d0d0d0">&lt;&lt;</span> <span style="color: #ed9d13">&quot;Largest number: &quot;</span><span style="color: #d0d0d0">&lt;&lt;</span> <span style="color: #d0d0d0">n1;</span>
+    <span style="color: #6ab825; font-weight: bold">if</span><span style="color: #d0d0d0">(n2</span> <span style="color: #d0d0d0">&gt;=</span> <span style="color: #d0d0d0">n1</span> <span style="color: #d0d0d0">&amp;&amp;</span> <span style="color: #d0d0d0">n2</span> <span style="color: #d0d0d0">&gt;=</span> <span style="color: #d0d0d0">n3)</span>
+        <span style="color: #d0d0d0">cout</span> <span style="color: #d0d0d0">&lt;&lt;</span> <span style="color: #ed9d13">&quot;Largest number: &quot;</span><span style="color: #d0d0d0">&lt;&lt;</span> <span style="color: #d0d0d0">n2;</span>
+    <span style="color: #6ab825; font-weight: bold">if</span><span style="color: #d0d0d0">(n3</span> <span style="color: #d0d0d0">&gt;=</span> <span style="color: #d0d0d0">n1</span> <span style="color: #d0d0d0">&amp;&amp;</span> <span style="color: #d0d0d0">n3</span> <span style="color: #d0d0d0">&gt;=</span> <span style="color: #d0d0d0">n2)</span>
+        <span style="color: #d0d0d0">cout</span> <span style="color: #d0d0d0">&lt;&lt;</span> <span style="color: #ed9d13">&quot;Largest number: &quot;</span><span style="color: #d0d0d0">&lt;&lt;</span> <span style="color: #d0d0d0">n3;</span>
+    <span style="color: #6ab825; font-weight: bold">return</span> <span style="color: #3677a9">0</span><span style="color: #d0d0d0">;</span>
+<span style="color: #d0d0d0">}</span>
+</pre></div>
+
+				</div>
 			</div>
 			<div class="right">
 				<div class="head">Output</div>
-				<div class="input"><img src="../if_switch_loop/14largeThree_out.PNG" class="img"></div>
+				<div class="Output">
+					<!-- <img src="../if_switch_loop/14largeThree_out.PNG" class="img"> -->
+					Enter three numbers: 21.6<br>
+18.4<br>
+26.3<br>
+Largest number: 26.3
+				</div>
 			</div>
 		</div>
 	
