--- a/cplus_prog/15evenOdd.html
+++ b/cplus_prog/15evenOdd.html
@@ -12,11 +12,32 @@
 		<div class="box">
 			<div class="right">
 				<div class="head">Source Code</div>
-				<div class="input"><img src="../if_switch_loop/15evenOdd_inp.PNG" class="img"></div>
+				<div class="input">
+					<!-- <img src="../if_switch_loop/15evenOdd_inp.PNG" class="img"> -->
+					<!-- HTML generated using hilite.me --><div style="background: #202020; overflow:auto;width:auto;border:solid lightblue;border-width:.1em .1em .1em .4em;padding:.2em .6em;"><pre style="margin: 0; line-height: 125%"><span style="color: #cd2828; font-weight: bold">#include &lt;iostream&gt; </span>
+<span style="color: #6ab825; font-weight: bold">using</span> <span style="color: #6ab825; font-weight: bold">namespace</span> <span style="color: #d0d0d0">std;</span>
+<span style="color: #6ab825; font-weight: bold">int</span> <span style="color: #447fcf">main</span><span style="color: #d0d0d0">()</span> <span style="color: #d0d0d0">{</span> 
+    <span style="color: #6ab825; font-weight: bold">int</span> <span style="color: #d0d0d0">n;</span>
+    <span style="color: #d0d0d0">cout</span> <span style="color: #d0d0d0">&lt;&lt;</span> <span style="color: #ed9d13">&quot;Enter an integer: &quot;</span><span style="color: #d0d0d0">;</span>
+    <span style="color: #d0d0d0">cin</span> <span style="color: #d0d0d0">&gt;&gt;</span> <span style="color: #d0d0d0">n;</span>
+    <span style="color: #6ab825; font-weight: bold">if</span> <span style="color: #d0d0d0">(</span> <span style="color: #d0d0d0">n</span> <span style="color: #d0d0d0">%</span> <span style="color: #3677a9">2</span> <span style="color: #d0d0d0">==</span> <span style="color: #3677a9">0</span><span style="color: #d0d0d0">)</span>
+        <span style="color: #d0d0d0">cout</span> <span style="color: #d0d0d0">&lt;&lt;</span> <span style="color: #d0d0d0">n</span> <span style="color: #d0d0d0">&lt;&lt;</span> <span style="color: #ed9d13">&quot; is even.&quot;</span><span style="color: #d0d0d0">;</span>
+    <span style="color: #6ab825; font-weight: bold">else</span><span style="color: #d0d0d0">{</span>
+        <span style="color: #d0d0d0">cout</span> <span style="color: #d0d0d0">&lt;&lt;</span> <span style="color: #d0d0d0">n</span> <span style="color: #d0d0d0">&lt;&lt;</span><span style="color: #ed9d13">&quot; is odd.&quot;</span><span style="color: #d0d0d0">;</span>
+    <span style="color: #d0d0d0">}</span>
+        
+    <span style="color: #6ab825; font-weight: bold">return</span> <span style="color: #3677a9">0</span><span style="color: #d0d0d0">;</span>
+<span style="color: #d0d0d0">}</span>
+</pre></div>
+
+				</div>
 			</div>
 			<div class="right">
 				<div class="head">Output</div>
-				<div class="input"><img src="../if_switch_loop/15evenOdd_out.PNG" class="img"></div>
+				<div class="Output">
+					<!-- <img src="../if_switch_loop/15evenOdd_out.PNG" class="img"> -->
+					Enter an integer: 33<br>33 is odd.
+				</div>
 			</div>
 		</div>
 	
