--- a/cplus_prog/39numPat6.html
+++ b/cplus_prog/39numPat6.html
@@ -12,7 +12,31 @@
 		<div class="box">
 			<div class="right">
 				<div class="head">Source Code</div>
-				<div class="input"><img src="code_img/39numPat6_inp.PNG" class="img"></div>
+				<div class="input">
+					<!-- <img src="code_img/39numPat6_inp.PNG" class="img"> -->
+					<!-- HTML generated using hilite.me --><div style="background: #202020; overflow:auto;width:auto;border:solid lightblue;border-width:.1em .1em .1em .4em;padding:.2em .6em;"><pre style="margin: 0; line-height: 125%"><span style="color: #cd2828; font-weight: bold">#include &lt;iostream&gt; </span>
+<span style="color: #6ab825; font-weight: bold">using</span> <span style="color: #6ab825; font-weight: bold">namespace</span> <span style="color: #d0d0d0">std;</span>
+<span style="color: #6ab825; font-weight: bold">int</span> <span style="color: #447fcf">main</span><span style="color: #d0d0d0">()</span>
+<span style="color: #d0d0d0">{</span>
+    <span style="color: #6ab825; font-weight: bold">int</span> <span style="color: #d0d0d0">n;</span>
+    <span style="color: #d0d0d0">cout&lt;&lt;</span><span style="color: #ed9d13">&quot;Enter number of rows: &quot;</span><span style="color: #d0d0d0">;</span>
+    <span style="color: #d0d0d0">cin&gt;&gt;n;</span>
+    <span style="color: #999999; font-style: italic">// Outer loop to handle number of rows // n in this case</span>
+    <span style="color: #6ab825; font-weight: bold">for</span><span style="color: #d0d0d0">(</span><span style="color: #6ab825; font-weight: bold">int</span> <span style="color: #d0d0d0">i=</span><span style="color: #3677a9">1</span><span style="color: #d0d0d0">;</span> <span style="color: #d0d0d0">i&lt;=n;</span> <span style="color: #d0d0d0">i++)</span>
+    <span style="color: #d0d0d0">{</span>
+        <span style="color: #6ab825; font-weight: bold">for</span><span style="color: #d0d0d0">(</span><span style="color: #6ab825; font-weight: bold">int</span> <span style="color: #d0d0d0">j=</span> <span style="color: #3677a9">1</span><span style="color: #d0d0d0">;</span> <span style="color: #d0d0d0">j&lt;=n-i+</span><span style="color: #3677a9">1</span><span style="color: #d0d0d0">;</span> <span style="color: #d0d0d0">j++</span> <span style="color: #d0d0d0">)</span>
+        <span style="color: #d0d0d0">{</span>
+            <span style="color: #d0d0d0">cout&lt;&lt;j;</span>
+        <span style="color: #d0d0d0">}</span>
+        <span style="color: #999999; font-style: italic">// Ending line after each row </span>
+        <span style="color: #d0d0d0">cout</span> <span style="color: #d0d0d0">&lt;&lt;</span> <span style="color: #d0d0d0">endl;</span>
+    <span style="color: #d0d0d0">}</span>
+    
+    <span style="color: #6ab825; font-weight: bold">return</span> <span style="color: #3677a9">0</span><span style="color: #d0d0d0">;</span>
+<span style="color: #d0d0d0">}</span>
+</pre></div>
+
+				</div>
 			</div>
 			<div class="right">
 				<div class="head">Output</div>
