--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Pawan Kumar Gupta</title>
+  <title>Poorvi Jaiswal</title>
   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
@@ -21,7 +21,7 @@
       </button>
       <div class="logo">
         <div class="part1"><a href="">P<a></div>
-        <div class="part2"><a href=""> awan Kumar Gupta</a></div>
+        <div class="part2"><a href=""> oorvi Jaiswal</a></div>
       </div>
       <ul class="ulist" id="mydiv">
               <li><a class="underline-animation active" href="#home">Home</a></li>
@@ -57,15 +57,13 @@
       <div class="front">
         <div class="box fadeinup">
           <div class="text">HEY! I AM</div>
-          <a href="#about"><h1 style="color: black;" class="font">Pawan Kumar Gupta</h1></a>
+          <a href="#about"><h1 style="color: black;" class="font">Poorvi Jaiswal</h1></a>
           <div class="wrapper">
-            <div class="static-txt">I'm  a</div>
-            <ul class="dynamic-txts">
-              <li><span>Professor.</span></li>
-              <li><span>Fashion Designer.</span></li>
-              <li><span>Web Designer.</span></li>
-              <li><span>Freelancer.</span></li>
-            </ul>
+            <div class="animate-container">
+              <h1><span class="static-txt">I am a</span>
+                <span class="txt-type dynamic-txt" data-wait="3000" data-words='["Frontend Developer", "Web Designer"]'></span>
+              </h1>
+            </div>
           </div>
         </div>     
       </div>
@@ -80,32 +78,29 @@
       </div>
       <div class="part2">
         <h1 class="head">About Me</h1><br>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco derit in voluptate velit esse
-        cillaborum.</p>
+        <p>👋 Hi there! I'm Poorvi Jaiswal, a front-end magician ✨ specializing in HTML, CSS, and JavaScript.  I craft stunning, user-friendly web interfaces 🌐 that captivate and engage. I turn designs into dynamic, responsive web experiences 🚀.<br>💫 #FrontEndDev 🔥#HTMLCSSJS</p>
         <div class="block">
 
           <table width="500" cellpadding="10px" cellspacing="20" align="left">
             <tr>
               <th>Name:</th>
-              <td> Pawan Kumar Gupta</td>
+              <td> Poorvi Jaiswal</td>
             </tr>
             <tr>
               <th>Date of Birth:</th>
-              <td>DOB...</td>
+              <td>8 June 2005</td>
             </tr>
             <tr>
               <th>Address:</th>
-              <td>Indore, INDIA</td>
+              <td>Indore, Madhya Pradesh.</td>
             </tr>
             <tr>
               <th>Email:</th>
-              <td>pawangupta@acropolis.in</td>
+              <td>poorvijaiswal220601@acropolis.in</td>
             </tr>
             <tr>
               <th>Phone:</th>
-              <td>+91 9406781742</td>
+              <td>+91 9926535768</td>
             </tr>
           </table><br>
           <!-- <input type="button" name="cv" value="DOWNLOAD CV" class="CV"> -->
@@ -120,23 +115,23 @@
     </div><br><br>
     <div class="icons">
       <div class="logos">
-        <a href="https://m.facebook.com/100001846152868/" target="top">
+        <a href="#" target="top">
           <img src="fbook.png" class="img">
         </a>
       </div>
       <div class="logos">
-        <a href="https://www.instagram.com/er_pawan_kumar_gupta/" target="top">
+        <a href="https://www.instagram.com/poorvi_jaiswal08/" target="top">
           <img src="insta2.png" class="img">
         </a>
       </div>
       <div class="logos">
-        <a href="https://www.linkedin.com/in/pawan-kumar-gupta-04830675">
+        <a href="#">
           <img src="link1.png" class="img">
         </a>
       </div>
       <div class="logos">
-        <a href="#">
-          <img src="twit.png" class="img">
+        <a href="https://github.com/poorvijaiswal">
+          <img src="github.png" class="img">
         </a>
       </div>
     </div>
@@ -168,9 +163,9 @@
             <div class="resume flex fadeinup" data-aos="fade-up" data-aos-offset="50">
               <div class="icon"><span><img src="edu1.png" class="img"></span></div>
               <div class="text">
-                <span class="date">Nov 2021-Jul 2024</span>
-                <h2>Doctor of Philosophy- PhD Computer Science and Engineering</h2>
-                <span class="from">AKS University, Satna, INDIA</span>
+                <span class="date">Nov 2028-Jul 2031</span>
+                <h2>Doctor of Philosophy- PhD. Computer Science and Engineering</h2>
+                <span class="from">ABC University, Banglore, INDIA</span>
                 <!-- <ul>
                   <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                   tempor incididunm.</li>
@@ -194,9 +189,9 @@
             <div class="resume flex fadeinup" data-aos="fade-up" data-aos-offset="50">
               <div class="icon"><span><img src="edu1.png" class="img"></span></div>
               <div class="text">
-                <span class="date">2008-2012</span>
-                <h2>Bachelor of Engineering(BE), Computer Science</h2>
-                <span class="from">Rajiv Gandhi Prodyogiki Vishwavidhyalaya</span>
+                <span class="date">2022-2026</span>
+                <h2>Bachelor of Technology(B. Tech), Computer Science and Information Technology</h2>
+                <span class="from">Acropolis Institue of Technology and Research<br>(RGPV University)</span>
                 <!-- <ul>
                   <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                   tempor incididunm.</li>
@@ -276,7 +271,7 @@
                  <div class="skill-main">
                   <div class="skill-detail">
                     <span>C Programming Language</span>
-                    <span>99%</span>
+                    <span>75%</span>
                   </div>
                   <div class="bar">
                     <div id="c-bar" class="clang"></div>
@@ -286,7 +281,7 @@
                  <div class="skill-main">
                   <div class="skill-detail">
                     <span>C++ Programing Language</span>
-                    <span>98%</span>
+                    <span>80%</span>
                   </div>
                   <div class="bar">
                     <div id="cplus-bar" class="cplus"></div>
@@ -295,8 +290,8 @@
 
                  <div class="skill-main">
                   <div class="skill-detail">
-                    <span>LISP Programing Language</span>
-                    <span>80%</span>
+                    <span>Python Programing Language</span>
+                    <span>60%</span>
                   </div>
                   <div class="bar">
                     <div id="lisp-bar" class="lisp"></div>
@@ -391,7 +386,7 @@
             </a>
             <div class="hold">
               <h3 class="contact">Address</h3><br>
-              <p class="para">Indore, India</p>
+              <p class="para">Indore, Madhya Pradesh, India</p>
             </div>
         </div>
 
@@ -403,19 +398,19 @@
           </a>
           <div class="hold">
             <h3 class="contact">Contact Number</h3><br>
-            <p class="para">+91 9406781742</p>
+            <p class="para">+91 9926535768</p>
             <!-- <p class="para">+91 877099366</p> -->
           </div>
         </div>
         <div class="conbox">
-          <a href="mailto:pawangupta@acropolis.in">
+          <a href="mailto:poorvijaiswal220601@acropolis.in">
             <div class="circle">
               <i class="fa fa-envelope"></i>
             </div>
           </a>
           <div class="hold">
             <h3 class="contact">Email Address</h3><br>
-            <p class="para">pawangupta@acropolis.in</p>
+            <p class="para">poorvijaiswal220601@acropolis.in</p>
           </div>
         </div>
       </div>
@@ -431,7 +426,7 @@
               </div>
               <div class="right-container">
               <div class="right-inner-container">
-                <form action="mailto:pawangupta@acropolis.in" method="post" enctype="text/plain">
+                <form action="mailto:poorvijaiswal220601@acropolis.in" method="post" enctype="text/plain">
                   <h2 class="lg-view">Contact</h2>
                   <h2 class="sm-view">Let's Chat</h2>
                        <p>* Required</p>
@@ -557,5 +552,8 @@ for (var i = 0; i < lis.length; i++) {
     duration: 2
   })
 </script>
+<!-- --------------animation text--------------- -->
+
+  <script type="text/javascript" src="animationtxt.js"></script>
 </body>
 </html>
