--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </a>
       </div>
       <div class="logos">
-        <a href="https://github.com/poorvijaiswal">
+        <a href="https://github.com/poorvijaiswal/poorvijaiswal">
           <img src="github.png" class="img">
         </a>
       </div>
