profile image added

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     <div class="container fadeinup" data-aos="fade-up" data-aos-offset="50">
       <div class="part1">
         <!-- <div class="pic">poorvi</div> -->
+         <img src="poorvi.jpg" class="pic">
       </div>
       <div class="part2">
         <h1 class="head">About Me</h1><br>
