added resume and linkedin profile

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </a>
       </div>
       <div class="logos">
-        <a href="#">
+        <a href="https://in.linkedin.com/in/poorvi-jaiswal-02275a233" target="_blank">
           <img src="link1.png" class="img">
         </a>
       </div>
